# Gauntlet-Predictor

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md
data/: Asphalt_Wiki_Links_11.xlsx  car_stats.json  cars_todo.json
gauntlet_predictor/: api.py  pyproject.toml
gauntlet_predictor/data/: cars.json  seed_tracks.py  tracks.json
gauntlet_predictor/src/: calibrate.py  cli.py  models.py  normalize.py  optimize.py  predict.py  storage.py
gauntlet_predictor/tests/: test_calibrate.py  test_models.py  test_normalize.py  test_optimize.py  test_predict.py
scripts/: scrape_cars.py  seed_backend.py
ui/: package-lock.json  package.json
ui/src/app/: layout.tsx  page.tsx
ui/src/app/calibrate/: page.tsx
ui/src/app/defense/: page.tsx
ui/src/app/predict/: page.tsx
ui/src/app/tracks/: page.tsx
ui/src/components/: sidebar.tsx
ui/src/lib/: api.ts  format.ts  stats.ts
