[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gauntlet-predictor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]",
    "rich",
    "numpy",
    "scipy",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
gauntlet = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
